# freeciv21

./: CMakeLists.txt  README.md  demoScenario.sav  demo_run.sh  flake.nix  vcpkg.json
.github/workflows/: build.yaml  release.yaml
ai/default/: aidiplomat.cpp  aiferry.cpp  aiunit.cpp  daicity.cpp  daidiplomacy.cpp  daieffects.cpp
client/: CMakeLists.txt  chatline.cpp  chatline.h  chatline_common.cpp  chatline_common.h  citybar.cpp  citydlg.cpp  citydlg.h  citydlg.ui  citydlg_common.cpp  client_main.cpp  climisc.cpp  climisc.h  clinet.cpp  connectdlg_common.cpp  control.cpp  control.h  dialogs.cpp  diplodlg.cpp  diplodlg.h  fc_client.cpp  fc_client.h  goto.cpp  governor.cpp  hudwidget.cpp  hudwidget.h  icons.cpp  listener.h  luaconsole.cpp  mapctrl.cpp  mapctrl_common.cpp  mapctrl_common.h  menu.cpp  menu.h  messagewin.cpp  messagewin_common.cpp  messagewin_common.h  minimap.cpp  minimap.h  minimap_panel.cpp  (+19 more)
client/audio/: audio.cpp
client/include/: mapctrl_g.h  mapview_g.h
client/luascript/: api_client_base.cpp
client/tileset/: tilespec.cpp  tilespec.h
client/views/: view_cities.cpp  view_cities_data.cpp  view_government.cpp  view_government.h  view_map.cpp  view_map.h  view_map_common.cpp  view_nations.cpp  view_nations.ui  view_nations_data.cpp  view_research.cpp  view_research.h  view_sabotages.cpp  view_sabotages.h  view_units.cpp  view_units.h  view_units.ui
cmake/: CPackConfig.cmake  FreecivBuildOptions.cmake  FreecivDependencies.cmake  FreecivInstall.cmake  NSIS.template.in
common/: actions.cpp  actions.h  chat.h  city.cpp  city.h  combat.cpp  diptreaty.cpp  diptreaty.h  effects.cpp  effects.h  events.cpp  events.h  fc_types.h  featured_text.cpp  featured_text.h  game.cpp  game.h  government.cpp  government.h  helpdata.cpp  idex.cpp  idex.h  improvement.cpp  improvement.h  map.cpp  map.h  map_types.h  movement.cpp  movement.h  path.h  path_finder.cpp  path_finder.h  player.cpp  player.h  reqtext.cpp  requirements.cpp  tile.cpp  unit.cpp  unit.h  unittype.cpp  (+4 more)
common/aicore/: path_finding.cpp  path_finding.h
common/networking/: dataio_raw.cpp  packets.def
data/: CMakeLists.txt  alio.tilespec  amplio.tilespec  amplio2.tilespec  cimpletoon.tilespec  default.serv  helpdata.txt  hex2t.tilespec  hexemplio.tilespec  isophex.tilespec  isotrident.tilespec  spacerace.serv  stdsounds.soundspec  toonhex.tilespec  trident.tilespec
data/amplio/: terrain1.spec  tiles.spec
data/amplio2/: activities.spec  terrain1.spec  tiles.spec
data/civ2civ3/: units.ruleset
data/classic/: units.ruleset
data/default/: buildings.ruleset  cities.ruleset  effects.ruleset  game.ruleset  governments.ruleset  nations.ruleset  styles.ruleset  techs.ruleset  terrain.ruleset  units.ruleset
data/hex2t/: tiles.spec
data/hexemplio/: activities.spec  (+4 more)
data/tilesets/: CMakeLists.txt
final_scenario/: accusation.sav  convert_freeciv_to_lunar_gambit.py  first.sav  out.sav  scenario.sav  session_1_begin_passive.sav  session_1_end_active.sav
lua/: database.lua
server/: CMakeLists.txt  auth.cpp  cityhand.cpp  citytools.cpp  citytools.h  cityturn.cpp  cityturn.h  commands.cpp  commands.h  diplhand.cpp  diplomats.cpp  diplomats.h  gamehand.cpp  gamehand.h  govhand.cpp  govhand.h  handchat.cpp  maphand.cpp  notify.cpp  notify.h  plrhand.cpp  report.cpp  rscompat.cpp  rssanity.cpp  ruleset.cpp  sanitycheck.cpp  server.cpp  settings.cpp  srv_main.cpp  stdinhand.cpp  techtools.cpp  unithand.cpp  unittools.cpp  unittools.h
tools/: CMakeLists.txt  civmanual.cpp
tools/fcmp/: CMakeLists.txt
tools/ruledit/: CMakeLists.txt  ruledit.cpp  ruledit_qt.cpp  univ_value.cpp
tools/ruleutil/: rulesave.cpp
utility/: fciconv.cpp  generate_specenum.py  log.h  registry_ini.cpp  registry_ini.h  shared.cpp  shared.h  support.cpp  support.h
(+111 files in other folders)
